fix subscription some text align

--- a/shared/modules/common/EmailSubscription/subscription.sass
+++ b/shared/modules/common/EmailSubscription/subscription.sass
@@ -11,6 +11,7 @@
     @include mobile
       text-align: center
       width: 100%
+      position: static
   &__inner
     display: flex
     margin-top: 1rem
